# MedDiagnostic

./: .env.sample  Dockerfile  README.md  appointment.txt  docker-compose.yaml  pyproject.toml  write.txt
catalog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_services_options_doctors.py  0003_alter_services_options_and_more.py  0004_alter_doctors_lastname_alter_doctors_name_and_more.py  0005_delete_doctors.py  0006_alter_services_options.py  0007_description.py  0008_servicescatalog.py  0009_delete_servicescatalog.py
catalog/templates/catalog/: base.html  contacts.html  description_form.html  description_list.html  feedback.html  main_page.html  services_confirm_delete.html  services_detail.html  services_form.html  services_list.html  servicescatalog_list.html
config/: settings.py  urls.py
description/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
description/migrations/: 0001_initial.py  0002_delete_doctors.py  0003_initial.py  0004_alter_companydescription_options_and_more.py  0005_alter_companydescription_options.py  0006_rename_companydescription_company.py
description/templates/description/: about_the_company.html  company_form.html  company_list.html  doctors_confirm_delete.html  doctors_detail.html  doctors_form.html  doctors_list.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_avatar_remove_user_city_and_more.py
users/templates/: login.html
users/templates/users/: user_form.html  (+4 more)
(+2 files in other folders)
