[tool.poetry]
name = "meddiagnostic"
version = "0.1.0"
description = "Website project"
authors = ["Makoto <makoto@mak.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
redis = "^5.0.8"
drf-yasg = "^1.21.7"
flake8 = "^7.1.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django = "4.2.2"
coverage = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
